[package]
name = "br-code-spec"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

[features]
default = []
qr-code-gen = []

[dependencies]
crc = "2.0.0-rc.1"
chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
strum = "^0.20"
strum_macros = "^0.20"
br-code-spec-derive = { path = "../br-code-spec-derive" }




