[package]
name = "emv-qrcps-derive"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.28"
syn = "1.0"
quote = "1.0"
darling = "0.13"

[lib]
proc-macro = true