[package]
name = "pix-api-client"
version = "0.2.1"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
repository = "https://github.com/saskenuba/pix-toolbelt/tree/master/crates/pix-api-client"
license = "MIT"
description = "A PIX API client for any compliant PSP."

[features]
default = []
# blocking = ["reqwest/blocking"]

[dependencies]
arc-swap = "^1.2"
async-trait = "^0.1"
base64 = "0.13"
log = "^0.4"
reqwest = { version = "^0.11", features = ["json", "native-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0.24"

[dependencies.pix-brcode]
version = "0.1.0"
path = "../pix-brcode"

[dev-dependencies]
anyhow = "1"