[package]
name = "pix-brcode"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
repository = "https://github.com/saskenuba/pix-toolbelt/tree/master/crates/pix-brcode"
license = "MIT"
description = "A ready to use compliant PIX specification, featuring fast de/serialization."

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dependencies.emv-qrcps]
version = "0.1.1"
path = "../emv-qrcps"
